--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.activity.SudokuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:noHistory="false"
             tools:ignore="LockedOrientationActivity">
